--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: TerraST
 Type: Package
 Title: Interface to Terralib 5.0 spacetime classes
-Version: 1.0
+Version: 0.1-0
 Date: 2014-05-16
 Author: Daniel T. Santos
 Maintainer: Daniel T. Santos <danieltex@gmail.com>
-Description: More about what it does (maybe more than one line)
+Description: This package provides a series of functions to manipulate Terralib spacetime classes and make apropriate conversions between the R API and Terralib.
 License: What Licence is it under ?
-Imports: Rcpp (>= 0.11.1)
+Depends: R (>= 3.0.0)
+Imports: Rcpp (>= 0.11.1), sp (>= 1.0-15)
 LinkingTo: Rcpp
